@@ -11,7 +11,8 @@ Copyright:
 
 License:
 
-    Copyright (C) 2010, Splitted-Desktop Systems.
+    Copyright (C) 2010-2011, Splitted-Desktop Systems.
+    Copyright (C) 2011, Intel Corporation.
 
     gstreamer-vaapi helper libraries are available under the terms of
     the GNU Lesser General Public License v2.1+.
